update swagger and endpoints
