# swagger.json
@@ -40,7 +40,9 @@
   "paths": {
     "/auth/signup": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Create a new user",
         "requestBody": {
           "required": true,
@@ -95,14 +97,19 @@
     },
     "/auth/signin": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Log In User",
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "required": ["email", "password"],
+                "required": [
+                  "email",
+                  "password"
+                ],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -171,7 +178,9 @@
     },
     "/auth/signout": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Log Out User",
         "security": [
           {
@@ -197,7 +206,9 @@
     },
     "/filters/categories": {
       "get": {
-        "tags": ["Filters"],
+        "tags": [
+          "Filters"
+        ],
         "summary": "Returns all categories",
         "security": [
           {
@@ -243,7 +254,9 @@
     },
     "/filters/ingredients": {
       "get": {
-        "tags": ["Filters"],
+        "tags": [
+          "Filters"
+        ],
         "summary": "Returns all ingredients",
         "security": [
           {
@@ -307,7 +320,9 @@
     },
     "/filters/glasses": {
       "get": {
-        "tags": ["Filters"],
+        "tags": [
+          "Filters"
+        ],
         "summary": "Returns all glasses",
         "security": [
           {
@@ -359,7 +374,9 @@
             "BearerAuth": []
           }
         ],
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "responses": {
           "200": {
             "description": "OK. Authenticated user's data",
@@ -385,14 +402,18 @@
             "BearerAuth": []
           }
         ],
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Allows a user to add an email to their subscription list",
         "requestBody": {
           "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "required": ["email"],
+                "required": [
+                  "email"
+                ],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -423,8 +444,15 @@
     "/users/update": {
       "patch": {
         "summary": "Update user information",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
         "description": "Updates user information including avatar and name.",
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "requestBody": {
           "content": {
             "multipart/form-data": {
@@ -441,7 +469,10 @@
                     "description": "User name"
                   }
                 },
-                "required": ["avatar", "name"]
+                "required": [
+                  "avatar",
+                  "name"
+                ]
               }
             }
           }
@@ -477,17 +508,14 @@
           "500": {
             "description": "Internal Server Error"
           }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
+        }
       }
     },
     "/drinks/mainpage": {
       "get": {
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "summary": "Returns popular categories and drinks",
         "security": [
           {
@@ -577,7 +605,9 @@
       "get": {
         "summary": "Search drinks",
         "description": "Returns a list of drinks based on search parameters",
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "security": [
           {
             "BearerAuth": []
@@ -678,7 +708,9 @@
     },
     "/drinks/popular": {
       "get": {
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "summary": "Returns popular drinks",
         "security": [
           {
@@ -902,7 +934,9 @@
     },
     "/drinks/{id}": {
       "get": {
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "summary": "Returns cocktail by id",
         "description": "Returns a cocktail with more detailed ingredients",
         "security": [
@@ -1111,7 +1145,9 @@
     },
     "/drinks/favorite": {
       "get": {
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "summary": "Returns favorite drinks",
         "security": [
           {
@@ -1180,7 +1216,9 @@
                       }
                     ],
                     "shortDescription": "A refreshing and citrusy cocktail with a hint of mint.",
-                    "ownerIds": ["65d0dcb810d121a004b9d440"]
+                    "ownerIds": [
+                      "65d0dcb810d121a004b9d440"
+                    ]
                   },
                   {
                     "_id": "639b6de9ff77d221f190c508",
@@ -1229,7 +1267,9 @@
                       }
                     ],
                     "shortDescription": "A classic hot cocktail with coffee, Irish whiskey, and whipped cream.",
-                    "ownerIds": ["65d0dcb810d121a004b9d440"]
+                    "ownerIds": [
+                      "65d0dcb810d121a004b9d440"
+                    ]
                   }
                 ]
               }
@@ -1246,9 +1286,13 @@
             }
           }
         }
-      },
+      }
+    },
+    "/drinks/favorite/add": {
       "post": {
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "summary": "Adds cocktails to the user's favorite drinks",
         "security": [
           {
@@ -1259,7 +1303,9 @@
           "content": {
             "application/json": {
               "schema": {
-                "required": ["drinkId"],
+                "required": [
+                  "drinkId"
+                ],
                 "properties": {
                   "drinkId": {
                     "type": "string"
@@ -1325,7 +1371,9 @@
                       }
                     ],
                     "shortDescription": "A classic and refreshing cocktail with rum, lime juice, and simple syrup.",
-                    "ownerIds": ["65d0dcb810d121a004b9d440"]
+                    "ownerIds": [
+                      "65d0dcb810d121a004b9d440"
+                    ]
                   }
                 }
               }
@@ -1364,10 +1412,11 @@
         }
       }
     },
-
-    "/drinks/favorite/{drinkId}": {
+    "/drinks/favorite/remove/{drinkId}": {
       "delete": {
-        "tags": ["Drinks"],
+        "tags": [
+          "Drinks"
+        ],
         "summary": "Removes cocktails from the user's favorite drinks",
         "security": [
           {
@@ -1437,13 +1486,207 @@
           }
         }
       }
+    },
+    "/drinks/own": {
+      "get": {
+        "summary": "Get own drinks",
+        "tags": [
+          "Drinks"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The cocktail has been successfully created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Drink"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized: Authentication failed due to invalid token"
+          }
+        }
+      }
+    },
+    "/drinks/own/add": {
+      "post": {
+        "summary": "Add a new drink",
+        "description": "Allows user to add a new drink",
+        "tags": [
+          "Drinks"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "drinkThumb": {
+                    "type": "string",
+                    "format": "binary",
+                    "description": "Cocktail image"
+                  },
+                  "drink": {
+                    "type": "string",
+                    "description": "Name of the drink"
+                  },
+                  "category": {
+                    "type": "string",
+                    "description": "Category of the drink",
+                    "example": "Other/Unknown"
+                  },
+                  "glass": {
+                    "type": "string",
+                    "description": "Type of glass",
+                    "example": "Collins glass"
+                  },
+                  "alcoholic": {
+                    "type": "string",
+                    "description": "Is the drink 'Alcoholic' or 'Non alcoholic'",
+                    "example": "Non alcoholic"
+                  },
+                  "description": {
+                    "type": "string",
+                    "description": "Detailed description of the drink"
+                  },
+                  "shortDescription": {
+                    "type": "string",
+                    "description": "Short description of the drink"
+                  },
+                  "instructions": {
+                    "type": "string",
+                    "description": "Instructions to prepare the drink"
+                  },
+                  "ingredients": {
+                    "type": "string",
+                    "description": "Ingredients of the drink in JSON format",
+                    "example": "[{\"title\":\"Gin\",\"measure\":\"1.5 oz\",\"ingredientId\":\"64aebb7f82d96cc69e0eb4a6\"},{\"title\":\"Elderflower cordial\",\"measure\":\"0.5 oz\",\"ingredientId\":\"64f1d5dc69d8333cf130fd39\"},{\"title\":\"Lime juice\",\"measure\":\"0.5 oz\",\"ingredientId\":\"64aebb7f82d96cc69e0eb4c1\"},{\"title\":\"Tonic water\",\"measure\":\"4 oz\",\"ingredientId\":\"64f1d5c969d8333cf130fbe8\"},{\"title\":\"Ice\",\"measure\":\"4\",\"ingredientId\":\"64f1d5c169d8333cf130fb4d\"}]"
+                  }
+                },
+                "required": [
+                  "drinkThumb",
+                  "drink",
+                  "category",
+                  "glass",
+                  "alcoholic",
+                  "shortDescription",
+                  "instructions",
+                  "ingredients"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+        }
+      }
+    },
+    "/drinks/own/remove/{drinkId}": {
+      "delete": {
+        "summary": "Remove own drink",
+        "operationId": "removeFromOwnDrinks",
+        "tags": [
+          "Drinks"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "drinkId",
+            "in": "path",
+            "description": "ID of the drink to be removed",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "The drink was successfully removed"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error: Not valid drinkId",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Not valid drinkId"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized: Authentication failed due to invalid token"
+          },
+          "404": {
+            "description": "Error: Own drink not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Own drink not found"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
       "User": {
         "type": "object",
-        "required": ["name", "email", "password", "dateOfBirth"],
+        "required": [
+          "name",
+          "email",
+          "password",
+          "dateOfBirth"
+        ],
         "properties": {
           "_id": {
             "type": "string",
@@ -1566,11 +1809,21 @@
           "_id": {
             "type": "string"
           },
+          "ownerId": {
+            "type": "string"
+          },
           "drink": {
             "type": "string"
           },
           "drinkAlternate": {
             "type": "string"
+          },
+          "favoritedBy": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "description": "Backend-generated user identifier."
+            }
           },
           "tags": {
             "type": "string"
@@ -1594,27 +1847,6 @@
             "type": "string"
           },
           "instructions": {
-            "type": "string"
-          },
-          "instructionsES": {
-            "type": "string"
-          },
-          "instructionsDE": {
-            "type": "string"
-          },
-          "instructionsFR": {
-            "type": "string"
-          },
-          "instructionsIT": {
-            "type": "string"
-          },
-          "instructionsRU": {
-            "type": "string"
-          },
-          "instructionsPL": {
-            "type": "string"
-          },
-          "instructionsUK": {
             "type": "string"
           },
           "drinkThumb": {
